--- a/demo/index.html
+++ b/demo/index.html
@@ -15,7 +15,7 @@
   "use strict";
 
   // first we make sure annyang started succesfully
-  if (annyang) {
+  if (annyang.isSpeechRecognitionSupported()) {
 
     // define the functions our commands will run.
     var hello = function() {
@@ -131,7 +131,7 @@
     <p>Simple. Here is all the code needed to achieve that:</p>
     <pre><code>&lt;script src="<a href="//cdnjs.cloudflare.com/ajax/libs/annyang/2.6.1/annyang.min.js">//cdnjs.cloudflare.com/ajax/libs/annyang/2.6.1/annyang.min.js</a>"&gt;&lt;/script&gt;
 &lt;script&gt;
-if (annyang) {
+if (annyang.isSpeechRecognitionSupported()) {
   // Let's define our first command. First the text we expect, and then the function it should call
   const commands = {
     'show tps report': function() {
